# habitest

./: .coveragerc  CHANGELOG.md  README.md  app.py  modo_de_ejecucion.md  muestra_json_peticion.json  pyproject.toml
database_manager/: __init__.py  base_model.py  base_serializer.py  main.py
docs/img/: c4-diagram.puml
external_services/: docker-compose.yml  init.sql
server/: __init__.py  constants.py  handler_request.py  main.py  request_handler.py
src/property/: controller.py  model.py  service.py
test/: test_server.py
test/database_manager/: test_base_model.py  test_db_manager.py
test/server/: test_request_handler.py
test/src/property/: test_property_model.py  test_property_service.py
